Fix spacing of issue emojis

--- a/app/assets/stylesheets/framework/awards.scss
+++ b/app/assets/stylesheets/framework/awards.scss
@@ -108,7 +108,7 @@
 }
 
 .award-control {
-  margin-right: 5px;
+  margin: 0 5px 6px 0;
   outline: 0;
 
   &.disabled {
